monitoring/prod-cluster/influxdb/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: influxdb
  name: influxdb2-ingress-route

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`influxdb.homelab.ftscode.de`)
      services:
        - name: influxdb-influxdb2
          namespace: influxdb
          port: 80
          scheme: http
